修正jquery表格插件

--- a/app/views/irm/bulletins/get_data.html.erb
+++ b/app/views/irm/bulletins/get_data.html.erb
@@ -20,7 +20,7 @@
          <tr id="<%=data[:id]%>">
            <td>
              <div>
-               <%= link_to(data[:bulletin_title], {:controller => "irm/bulletins", :action => "show", :id => "{id}"})%>
+               <%= link_to(data[:bulletin_title], {:controller => "irm/bulletins", :action => "show", :id => data[:id]})%>
              </div>
            </td>
            <td>
