--- a/public/themes/default/stylesheets/table.ie6.css
+++ b/public/themes/default/stylesheets/table.ie6.css
@@ -6,6 +6,7 @@
     width: 100%;
     overflow: auto;
     overflow-y: hidden;
+    table-layout: fixed;
     /*border:1px solid #7F7F7F;*/
 }
 .irm-datatable thead {border-spacing:0;} /* for safari bug */
