--- a/public/themes/salesforce2/stylesheets/common.css
+++ b/public/themes/salesforce2/stylesheets/common.css
@@ -1024,6 +1024,8 @@ div.actonType{float:left;}
 .tsidMenu-bl{float:left\9;display:inline\9;height:12px\9;width: 12px\9;background-image:url("../images/header_mutton.png")\9;background-position:-3px -84px\9; }
 .tsidMenu-bc{margin-left:12px\9; margin-right:12px\9;height:11px\9;border-bottom: 1px solid #86b8c8\9;background-color:white;}
 .menuItems{border-left: 1px solid #86b8c8\9;border-right: 1px solid #86b8c8\9;background-color:white\9;}
+.menuParent .menuLabel-tr{width:15px\9; height: 24px\9; position:absolute\9; right:0\9; top: 0\9;background-image:url("../images/header_mutton.png")\9;background-position:right -72px\9; }
+.menuParent .menuLabel-tl{width:15px\9; height: 24px\9; position:absolute\9; left:0\9; top: 0\9;background-image:url("../images/header_mutton.png")\9;background-position:left -72px\9; }
 .menuParent .menuLabelHover .menuLabel-tr{width:15px\9; height: 24px\9; position:absolute\9; right:0\9; top: 0\9;background-image:url("../images/header_mutton.png")\9;background-position:right -72px\9; }
 .menuParent .menuLabelHover .menuLabel-tl{width:15px\9; height: 24px\9; position:absolute\9; left:0\9; top: 0\9;background-image:url("../images/header_mutton.png")\9;background-position:left -72px\9; }
 .menuParent .menuLabelClick .menuLabel-tr{width:12px\9; height: 24px\9; position:absolute\9; right:0\9; top: 0\9;background-image:url("../images/header_mutton.png")\9;background-position:right -200px\9; }
