--- a/app/views/irm/common/_crop.html.erb
+++ b/app/views/irm/common/_crop.html.erb
@@ -1,23 +1,33 @@
 <%= image_tag source.avatar.url(:original), :id => "crop_box" %>
+<% require_javascript(:jcrop) %>
+<% require_css(:jcrop) %>
 <script type="text/javascript">
-  GY.use("yui2-imagecropper", function(Y){
-
-    var crop = new Y.YUI2.widget.ImageCropper('crop_box', {
-        initialXY: [0, 0],
-        keyTick: 1,
-        shiftKeyTick: 50,
-        minHeight: 16,
-        minWidth: 16,
-        initHeight: 45,
-        initWidth: 45,
-        ratio: true
-    });
-
-    crop.on("moveEvent",  function() {
-        Y.one("#crop_x").set("value", crop.getCropCoords().left);
-        Y.one("#crop_y").set("value", crop.getCropCoords().top);
-        Y.one("#crop_w").set("value", crop.getCropCoords().width);
-        Y.one("#crop_h").set("value", crop.getCropCoords().height);
-    });
+  $(function(){
+      function onChange(crop){
+            $("#crop_x").val(crop.x);
+            $("#crop_y").val(crop.y);
+            $("#crop_w").val(crop.w);
+            $("#crop_h").val(crop.h);
+          <% if defined?(display_dom)%>
+            $("#<%=display_dom%>").html("=>"+crop.w+"px X "+crop.h+"px")
+          <%end%>
+      }
+      function onSelect(crop){
+            $("#crop_x").val(crop.x);
+            $("#crop_y").val(crop.y);
+            $("#crop_w").val(crop.w);
+            $("#crop_h").val(crop.h);
+          <% if defined?(display_dom)%>
+            $("#<%=display_dom%>").html("=>"+crop.w+"px X "+crop.h+"px")
+          <%end%>
+      }
+      var currentCrop = $.Jcrop('#crop_box',{
+          onChange: onChange  ,
+          onSelect: onSelect
+      });
+      <% if defined?(best_size)%>
+        <% current_size = [0,0]+best_size%>
+        currentCrop.animateTo(<%=current_size%>);
+      <% end%>
   });
 </script>
