--- a/public/themes/default/stylesheets/table.ie6.css
+++ b/public/themes/default/stylesheets/table.ie6.css
@@ -1,4 +1,5 @@
 /* basic skin styles */
+/*.irm-datatable {table-layout: fixed;}*/
 .irm-datatable table {
     margin:0;padding:0;
     font-family:arial;font-size:inherit;
