--- a/public/themes/default/stylesheets/header.css
+++ b/public/themes/default/stylesheets/header.css
@@ -217,8 +217,8 @@ body#body {
 #pageMenu-arrow, #settingMenu-arrow #companyMenu-arrow {
     background:url("../images/header_mutton.png") no-repeat scroll 0 -129px transparent;
     height:5px;
-    position:relative;
-    right:-12px;
+    position:absolute;
+    right: 5px;
     top:10px;
     width:8px;
     float:right;
