--- a/app/views/icm/incident_requests/_help_desk_list.html.erb
+++ b/app/views/icm/incident_requests/_help_desk_list.html.erb
@@ -26,5 +26,5 @@
                                { :key => "last_request_date", :label => t(:label_icm_incident_request_last_date),:width=>"180px" },
                                { :key => "external_system_name", :label => t(:label_irm_external_system),:width=>"180px" }
                                ],{:export_data=>"#incidentRequestExport",:row_perpage=>10,:search_box=>"incident_requestsSearchBox",:paginator_box=>'incidentRequestsPaginatorBox',:view_filter=>true,:html=>true})%>
-        <div id="incidentRequestsPaginatorBox"></div>
+        <div id="incidentRequestsPaginatorBox" class="irm-paginator-box"></div>
 </div>
