--- a/public/themes/default/stylesheets/container.css
+++ b/public/themes/default/stylesheets/container.css
@@ -89,8 +89,13 @@ body .page-block .pbBody {padding:0;}
 body .page-block, body .page-block .pbBody, body .page-block .pbBottomButtons {
     background-color:transparent;
     background-image:none;
-    margin:0 0 10px 0;
+    margin:0 0 0 0;
 }
+
+.setupBlock .page-block {
+    margin-bottom: 10px;
+}
+
 body .page-block, body .secondary-palette.page-block, body .page-body .sub-block {
     -moz-border-radius:4px 4px 4px 4px;
     -webkit-border-radius: 4px;
