修正因EXTJS样式覆盖，导致部分样式出错的问题

--- a/public/themes/default/stylesheets/button.css
+++ b/public/themes/default/stylesheets/button.css
@@ -113,3 +113,5 @@ body .page-block .pbBody .pbSubheader .hideListButton {
     height:10px;
     width:16px;
 }
+
+#bodyColB table * {box-sizing: content-box;}
