--- a/app/views/icm/incident_requests/get_help_desk_data.html.erb
+++ b/app/views/icm/incident_requests/get_help_desk_data.html.erb
@@ -49,7 +49,7 @@
                <%  if(data[:reply_flag].eql?("Y") && data[:close_flag].eql?("N"))%>
                   <%= icon_link("btn_reply", t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
                <% end %>
-               <%= (data[:incident_status_name])%> <%= link_to( data[:title],{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
+               (<%= data[:incident_status_name]%>) <%= link_to( data[:title],{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
              </div>
            </td>
            <td>
