修正数据视图filter

--- a/app/views/irm/filters/_new_form.html.erb
+++ b/app/views/irm/filters/_new_form.html.erb
@@ -158,31 +158,10 @@
 <% end %>
 
 <script type="text/javascript">
-  GY.use("irm","gallerydispatcher","substitute",function(Y){
-      Y.on("domready",function(){
-        Y.on('change',Y.irm.rawConditionClause,".filterColumnSelect");
-        Y.on('change', function(e) {
-          var obj;
-          var seq_num = e.currentTarget.getAttribute("ref");
-          var attribute_id = "";
-          if(e.currentTarget.getData("dispatcher")){
-            obj = e.currentTarget.getData("dispatcher")
-          }else{
-
-            obj = new Y.Dispatcher({node:"#filter"+seq_num});
-            e.currentTarget.setData("dispatcher",obj);
-          }
-
-          if(e.currentTarget.get("value")&&e.currentTarget.get("value")!=""){
-             attribute_id = e.target.one("option[value="+e.target.get("value")+"]").getAttribute("attribute_id")
-           }
-          var url = unescape(Y.one("#filterContent").getAttribute("href"));
-          url = Y.Lang.substitute(url,{seq_num:seq_num,attribute_id:attribute_id});
-
-          obj.set('uri', url);
-
-	    }, '.filterColumnSelect');
+  $(function(){
+      $("#filterContent .filterColumnSelect").live("change",function(event){
+          rawConditionClause("rawConditionClause",event);
+          refreshFilterOptions("filterContent",event);
       });
-
   });
 </script>
