修正首页表格

--- a/app/views/icm/incident_requests/get_help_desk_data.html.erb
+++ b/app/views/icm/incident_requests/get_help_desk_data.html.erb
@@ -4,28 +4,25 @@
        <table count="<%=@count%>">
          <thead>
            <tr>
-             <th style="width:80px">
-               <div><%= t(:operation) %></div>
-             </th>
-             <th style="width:60px;">
+             <th style="width:30px;">
                <div><%= t(:label_icm_incident_request_request_number_shot) %></div>
              </th>
-             <th style="width:200px;">
+             <th >
                <div><%= t(:label_icm_incident_request_title) %></div>
              </th>
-             <th style="width:180px;">
+             <th style="width:150px;">
                <div><%= t(:label_icm_incident_request_organization) %></div>
              </th>
-             <th style="width:60px;">
+             <th style="width:40px;">
                <div><%= t(:label_icm_incident_request_priority) %></div>
              </th>
-             <th style="width:130px;">
+             <th style="width:120px;">
                <div><%= t(:label_icm_incident_request_requested_by) %></div>
              </th>
-             <th style="width:120px;">
+             <th style="width:100px;">
                <div><%= t(:label_icm_incident_request_last_date) %></div>
              </th>
-             <th>
+             <th style="width:180px;">
                <div><%= t(:label_irm_external_system) %></div>
              </th>
            </tr>
@@ -33,12 +30,6 @@
          <tbody>
          <% @datas.each do |data| %>
          <tr id="<%=data[:id]%>">
-           <td>
-             <div>
-               <%= link_to(t(:label_icm_reply),{:controller=>"icm/incident_journals",:action=>"new",:request_id=>data[:id]}) %>
-               <%= link_to(t(:edit),{:controller=>"icm/incident_requests",:action=>"edit",:id=>data[:id]}) %>
-             </div>
-           </td>
            <td>
              <div>
                <%= data[:request_number] %>
@@ -69,7 +60,7 @@
            </td>
            <td>
              <div>
-               <%=format_date(data[:end_date_active])%>
+               <%=I18n.t(:ago,:message=>distance_of_time_in_words(Time.now, data[:last_request_date]))%>
              </div>
            </td>
            <td>
