--- a/app/views/irm/bulletins/_bulletin_portlet.html.erb
+++ b/app/views/irm/bulletins/_bulletin_portlet.html.erb
@@ -24,7 +24,7 @@
                  {:key=>"bulletin_title",:label=>t(:label_irm_bulletin_title), :formatter=>"Y.irm.template", :sortable=>true},
                  {:key=>"page_views",:label=>t(:label_irm_bulletin_page_views), :width => "70"},
                  {:key=>"published_date",:label=>t(:label_irm_bulletin_published_date), :width => "120"}],
-                {:html=>true}
+                {:force_html=>true}
       )%>
 </div>
 </div>
