--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,6 +106,6 @@
         </div>
         <%= render :partial => "/irm/common/footer"%>
     </div>
-
+    <%= render :partial=>"helper/loading_div" %>
 </body>
 </html>
