--- a/app/views/irm/people/show.html.erb
+++ b/app/views/irm/people/show.html.erb
@@ -171,7 +171,7 @@
 <div id="id_person_system_access" class="bRelatedList">
     <a name="id_person_system_access_target">
     </a>
-    <div class="listRelatedObject taskBlock">
+    <div class="listRelatedObject setupBlock">
       <div class="page-block secondary-palette">
         <div class="pbHeader">
           <table cellspacing="0" cellpadding="0" border="0">
@@ -218,7 +218,7 @@
 <div id="id_person_support_group" class="bRelatedList">
     <a name="id_person_support_group_target">
     </a>
-    <div class="listRelatedObject taskBlock">
+    <div class="listRelatedObject setupBlock">
       <div class="page-block secondary-palette">
         <div class="pbHeader">
           <table cellspacing="0" cellpadding="0" border="0">
@@ -247,7 +247,7 @@
             </div>
           </div>
           <!-- Begin company access table -->
-            <%= datatable("support_group",url_for(:controller=>"irm/group_members",:action=>"get_data_from_person",:id=>@person.id),
+            <%= datatable("support_group", {:controller=>"irm/group_members",:action=>"get_data_from_person",:id=>@person.id},
                               [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"60px"},
                                {:key=>"name",:label=>t(:label_irm_group_name)},
                                {:key=>"description",:label=>t(:label_irm_group_description)}])%>
@@ -280,7 +280,7 @@
         <div id="login_history_list" class="datatable" style="width:100%">
 
         </div>
-        <%= datatable("login_history_list",url_for( :controller=>"irm/my_login_history",:action => "get_login_data",:format=>"json", :id => @person.id),
+        <%= datatable("login_history_list", {:controller=>"irm/my_login_history", :action => "get_login_data", :format=>"json", :id => @person.id},
                       [{:key=>"user_ip",:label=>t(:label_irm_login_record_user_ip),:width=>"110px"},
 
                        { :key => "operate_system", :label => t(:label_irm_login_record_operate_system),:width=>"160px" },
