修改事故单领取与分配的页面

--- a/app/views/icm/incident_requests/assign_dashboard.html.erb
+++ b/app/views/icm/incident_requests/assign_dashboard.html.erb
@@ -49,7 +49,7 @@
                 <td class="dataCol" style="width:30%"><%= blank_select_tag(:support_person_id,[],{},
                                     {
                                      :id=>"incident_request_support_person_id",
-                                     :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"{incident_request_support_group_id}"),
+                                     :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${incident_request_support_group_id}"),
                                      :depend=>"incident_request_support_group_id",
                                      }) %></td>
                 <td class="dataCol" style="width:20%"><div><%= submit_tag(t(:label_icm_incident_request_assign),{:id=>"formSubmit",:disabled=>true})  %></div></td>
@@ -64,25 +64,20 @@
 </div>
 
 <script type="text/javascript">
-  GY.use("cascadeselect",function(Y){
-      Y.on("irm:change",function(e){
-          if(e.details[2]=="Datatable"&&"incident_requestsDatatable"==e.details[0])
-            e.details[1].on("selectedChange",function(e){
-                var selected_requests = e.details[0];
-                var ids = [];
-                for(var i in selected_requests){
-                  ids.push(selected_requests[i].id);
-                }
-                Y.one("#incident_request_ids").set("value",ids.join(","));
-                if(selected_requests.length>0)
-                  Y.one("#formSubmit").removeAttribute("disabled");
-                else
-                  Y.one("#formSubmit").setAttribute("disabled",true);
-
-            })
-      });
-      new Y.CascadeSelect({source: "#incident_request_support_group_id",target:["#incident_request_support_person_id"]});
-
+  Ext.onReady(function(){
+      $("#incident_request_support_group_id").cascade("#incident_request_support_person_id") ;
+      var processSelected = function(selModel,selected){
+          var ids = [];
+          for(var i = 0;i<selected.length;i++){
+            ids.push(selected[i].data.id);
+          }
+          $("#incident_request_ids").val(ids.join(","));
+          if(selected.length>0)
+              Ext.get("formSubmit").dom.removeAttribute("disabled");
+          else
+              $("#formSubmit").attr("disabled",true);
+      }
+      Ext.getCmp("incident_requestsDatatable").selModel.addListener("selectionchange",processSelected);
   });
 </script>
 
