修正事故单相关页面的javascript代码

--- a/app/views/helper/_rich_text.html.erb
+++ b/app/views/helper/_rich_text.html.erb
@@ -29,7 +29,7 @@
             }
         });
     <%if force_fit_width%>
-      <%=textarea_id%>RichText.setWidth(currentTextArea.parent().getComputedWidth());
+      <%=textarea_id%>RichText.setWidth(currentTextArea.parent().getComputedWidth()-10);
     <%end%>
     });
 
