--- a/app/views/icm/incident_journals/edit_status.html.erb
+++ b/app/views/icm/incident_journals/edit_status.html.erb
@@ -85,7 +85,8 @@
                 <%= sub_f.hidden_field(:incident_request_id) %>
               <td class="labelCol"><%= t(:label_icm_incident_journal_reply) %></td>
               <td class="dataCol" colspan="3" width="82%">
-                <%= sub_f.text_area :message_body ,:id=>"msgEditor",:jrequired=>true,:style=>"display:none;"%>
+                <%= sub_f.text_area :message_body ,:id=>"msgEditor",:cols=>150,:rows=>8,:required=>true%>
+                <%= rich_text_area("msgEditor",true) %>
               </td>
               <% end%>
             </tr>
@@ -93,24 +94,8 @@
               <td class="labelCol"><%= t(:label_icm_incident_journal_attachment) %></td>
               <td class="dataCol" colspan="3" width="82%">
 
-              <table>
-                <tbody id="fileTemplate" style="display:none" seq="0">
-                <tr id="file_{seq}" class="fileArea">
-                    <td><input type="file" name="{ref}[{seq}][file]"/></td>
-                    <td class="labelCol"><%= t(:label_icm_incident_journal_attachment_desc) %></td>
-                    <td><input type="text" name="{ref}[{seq}][description]" size="40"/></td>
-                    <td><a class="deleteAttach" delete_ref="file_{seq}" href="javascript:void(0)"><%= t(:delete) %></a></td>
-                </tr>
-                </tbody>
-                <tbody id="fileContent">
+                <%= render :partial=>"helper/upload_file",:locals=>{:upload_file_id=>"pass_incident_request_file"} %>
 
-                </tbody>
-                <tbody id="fileButtons">
-                  <tr>
-                    <td><a id="addButton" href="javascript:void(0)"><%= t(:label_icm_incident_journal_add_attachment) %></a></td>
-                  </tr>
-                </tbody>
-              </table>
               </td>
             </tr>
         </tbody>
@@ -133,47 +118,3 @@
   </div>
 </div>
 <% end %>
-
-<script type="text/javascript">
-
-GY.use('node','substitute','yui2-editor', function(Y) {
-  var YAHOO = Y.YUI2;
-  var editor = new YAHOO.widget.Editor('msgEditor', {
-        height:'200px',
-        width:'84%',
-        toolbar: {
-            buttons: [
-                { group: 'textstyle',
-                    buttons: [
-                        { type: 'push', label: 'Bold', value: 'bold' },
-                        { type: 'push', label: 'Italic', value: 'italic' },
-                        { type: 'push', label: 'Underline', value: 'underline' },
-                        { type: 'push', label: 'Create an Unordered List', value: 'insertunorderedlist' },
-	                    { type: 'push', label: 'Create an Ordered List', value: 'insertorderedlist' },
-                        { type: 'color', label: 'Font Color', value: 'forecolor', disabled: true },
-                        { type: 'color', label: 'Background Color', value: 'backcolor', disabled: true }
-                    ]
-                }
-            ]
-        }
-    });
-    editor.render();
-    Y.all(".edit_icm_incident_request input[type=submit]").on("click",function(){
-      editor.saveHTML();
-    });
-
-    Y.one("#fileButtons #addButton").on('click',function(){
-      var templateContainer = Y.one("#fileTemplate");
-      var seq = templateContainer.getAttribute("seq");
-      templateContainer.setAttribute("seq",parseInt(seq)+1);
-      var template = templateContainer.getContent();
-      var row =  Y.Lang.substitute(template,{seq:seq,ref:"files"});
-      Y.one("#fileContent").appendChild(row);
-    });
-    Y.one("#fileContent").delegate("click",function(e){
-        Y.log(this.getAttribute("delete_ref"));
-        Y.one("#"+this.getAttribute("delete_ref")).remove();
-    },'.deleteAttach')
-});
-</script>
-
