--- a/app/views/csi/surveys/_new_form.html.erb
+++ b/app/views/csi/surveys/_new_form.html.erb
@@ -128,8 +128,13 @@
               <td class="dataCol empty">&nbsp;</td>
             </tr>
 
-            <%= render :partial => "irm/duel_select/search",:locals => {:label=>t(:label_irm_wf_rule_action_type),:f=>f,:types=>duel_types,:sources=>duel_values,:str_value_field=>:range_str,:str_value=>""} %>
+            <tr>
+              <td class="labelCol"><%= t(:label_irm_wf_rule_action_type) %></td>
+              <td class="dataCol" style="width:82%">
+                <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>duel_types,:sources=>duel_values,:str_value_field=>:range_str,:str_value=>@survey.get_range_str,:size=>7} %>
+              </td>
 
+            </tr>
         </tbody>
       </table>
     </div>
