--- a/app/views/irm/bulletins/_edit_form.html.erb
+++ b/app/views/irm/bulletins/_edit_form.html.erb
@@ -1,6 +1,7 @@
 <%= common_title(:show_data=>@bulletin.title) %>
-<script type="text/javascript" src="/javascripts/ext4-all.js"></script>
-<link rel="stylesheet" type="text/css" href="/themes/salesforce2/stylesheets/ext4-all.css"></link>
+<% require_javascript(:extjs) %>
+<% require_css(:extjs) %>
+
 <%= form_for(@bulletin,:url=>{:action=>"update"},:builder => LabellingFormBuilder, :html => {:multipart => true}) do |f| %>
 <%= hidden_field_tag :return_url,@return_url %>
 <%= f.hidden_field :column_ids %>
@@ -51,7 +52,8 @@
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_bulletin_content)%></label></td>
               <td class="dataCol" colspan="4" width="100%">
-                <%= f.text_area :content ,:id=>"msgEditor",:value=>@bulletin.content||"   ",:style=>"display:none;"%>
+                <%= f.text_area :content ,:id=>"msgEditor",:rows=>8, :required => true%>
+                <%= rich_text_area("msgEditor",true) %>
               </td>
             </tr>
             <tr>
@@ -90,7 +92,12 @@
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
-            <%= render :partial => "irm/duel_select/search",:locals => {:label=>t(:label_irm_wf_rule_action_type),:f=>f,:types=>duel_types,:sources=>duel_values,:str_value_field=>:access_str,:str_value=>@bulletin.get_access_str} %>
+            <tr>
+              <td class="labelCol"><%= t(:label_irm_wf_rule_action_type) %></td>
+              <td class="dataCol" width="82%">
+                <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>duel_types,:sources=>duel_values,:str_value_field=>:access_str,:str_value=>@bulletin.get_access_str} %>
+              </td>
+            </tr>
         </tbody>
       </table>
     </div>
@@ -155,62 +162,7 @@
 </div>
 <% end %>
 
-<script type="text/javascript">
 
-GY.use('irm','node','substitute','yui2-editor', function(Y) {
-  var YAHOO = Y.YUI2;
-  var editor = new YAHOO.widget.Editor('msgEditor', {
-        height:'250px',
-        width:'80%',
-        toolbar: {
-            buttons: [
-                { group: 'textstyle',
-                    buttons: [
-                        { type: 'push', label: 'Bold', value: 'bold' },
-                        { type: 'push', label: 'Italic', value: 'italic' },
-                        { type: 'push', label: 'Underline', value: 'underline' },
-                        { type: 'push', label: 'Create an Unordered List', value: 'insertunorderedlist' },
-	                    { type: 'push', label: 'Create an Ordered List', value: 'insertorderedlist' },
-                        { type: 'push', label: 'Upload Image From Clipboard', value: 'uploadImageFormClipboard', id: 'uploadImageFormClipboard' },
-                        { type: 'color', label: 'Font Color', value: 'forecolor', disabled: true },
-                        { type: 'color', label: 'Background Color', value: 'backcolor', disabled: true }
-                    ]
-                }
-            ]
-        }
-    });
-
-    var dialog = new Y.YUI2.widget.Dialog("container_applet_upload", {
-        visible: true,
-        context: [Y.one("#uploadImageFormClipboard"), "tl", "bl"],
-        draggable: true,
-        close: true
-    });
-
-    editor.on('toolbarLoaded', function() {
-        this.toolbar.on('uploadImageFormClipboardClick', function(o) {
-          if (Y.one("#container_applet_upload_c")){
-            Y.one("#container_applet_upload_c").remove();
-          }
-          dialog.setBody("<iframe frameborder=0 scrolling='no'  src='/common/upload_screen_shot' class='screen_shot_frame'></iframe>");
-          dialog.setHeader('<%= t :upload_from_clipboard%>');
-          dialog.render(document.body);
-          dialog.center();
-          dialog.show();
-        });
-    }, editor, true);
-
-    editor.render();
-
-    Y.all("#new_bulletin_submit").on("click",function(){
-      editor.saveHTML();
-    });
-
-    Y.all("#new_bulletin_submit_top").on("click",function(){
-      editor.saveHTML();
-    });
-});
-</script>
 
 <script>
 Ext.onReady(function() {
