html 表格 IE6 下翻页部分CSS

--- a/app/views/irm/my_info/index.html.erb
+++ b/app/views/irm/my_info/index.html.erb
@@ -133,7 +133,7 @@
 <div id="id_person_system_access" class="bRelatedList">
     <a name="id_person_system_access_target">
     </a>
-    <div class="listRelatedObject taskBlock">
+    <div class="listRelatedObject setupBlock">
       <div class="page-block secondary-palette">
         <div class="pbHeader">
           <table cellspacing="0" cellpadding="0" border="0">
@@ -172,7 +172,7 @@
 <div id="id_person_support_group" class="bRelatedList">
     <a name="id_person_support_group_target">
     </a>
-    <div class="listRelatedObject taskBlock">
+    <div class="listRelatedObject setupBlock">
       <div class="page-block secondary-palette">
         <div class="pbHeader">
           <table cellspacing="0" cellpadding="0" border="0">
