修正公告按的部分JS

--- a/app/views/irm/bulletins/_edit_form.html.erb
+++ b/app/views/irm/bulletins/_edit_form.html.erb
@@ -51,7 +51,7 @@
             </tr>
             <tr>
               <td class="labelCol"><label><%=(t :label_irm_bulletin_content)%></label></td>
-              <td class="dataCol" colspan="4" width="100%">
+              <td class="data2Col" colspan="4" width="100%">
                 <%= f.text_area :content ,:id=>"msgEditor",:rows=>8, :required => true%>
                 <%= rich_text_area("msgEditor",true) %>
               </td>
@@ -119,9 +119,6 @@
           </tr>
         </thead>
         <tbody id="file_body">
-            <tbody id="exist_attachments_list">
-                <%= list_bulletin_existed_attachments(@bulletin)%>
-            </tbody>
             <tr id="file_0">
               <td class="dataCol"></td>
               <td class="dataCol"><%= link_to t(:delete), {}, {:href => "javascript:void(0);", :onclick => "delete_line(0);"} %></td>
@@ -129,6 +126,10 @@
               <td class="dataCol"><%=select_tag "file[0][file_category]", options_for_select(available_file_categories)%></td>
               <td class="dataCol"><%=text_field_tag "file[0][description]", "", {:rows => 3, :cols => 35}%>(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>
             </tr>
+
+            <tbody id="exist_attachments_list">
+                <%= list_bulletin_existed_attachments(@bulletin)%>
+            </tbody>
         <tbody>
             <tr>
               <td class="dataCol"></td>
@@ -205,40 +206,24 @@ Ext.onReady(function() {
 });
 </script>
 
-<script type="text/javascript">
-  function delete_subject(tar){
-    GY.use(function(Y){
-        Y.one("#tr_" + tar).remove();
-    })
-  }
-
-  function add_subject(tar){
-    GY.use(function(Y){
-        Y.one("#tr_");
-    })
-  }
-
-
+<script>
   var line_count = 1;
 
  function delete_line(l)
  {
-      GY.use(function(Y){
-          Y.one("#file_" + l).remove();
-      })
-  }
+     $("#file_" + l).remove();
+ }
+
   function generate_line()
   {
-      GY.use(function(Y){
-          var node = Y.Node.create('<tr id="file_' + line_count + '">'
+      var node = '<tr id="file_' + line_count + '">'
                   + '<td class="dataCol"></td>'
                   + '<td class="dataCol"><a onclick="delete_line(' + line_count + ');" href="javascript:void(0);"><%= t :delete%></a></td>'
                   + '<td class="dataCol"><input type="file" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
                   + '<td class="dataCol"><select name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= raw(options_for_select(available_file_categories).gsub!(/\n+/, ""))%>' + '</select></td>'
                   + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35">(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>'
-                  + '</tr>');
-          Y.one("#file_body").appendChild(node);
-      });
+                  + '</tr>';
+      $("#file_body").append(node);
       line_count ++;
   }
 </script>
