--- a/app/views/irm/bulletins/_new_form.html.erb
+++ b/app/views/irm/bulletins/_new_form.html.erb
@@ -203,44 +203,24 @@ Ext.onReady(function() {
 });
 </script>
 
-<script type="text/javascript">
-  function delete_subject(tar){
-    GY.use(function(Y){
-        Y.one("#tr_" + tar).remove();
-    })
-  }
-
-  function add_subject(tar){
-    GY.use(function(Y){
-        Y.one("#tr_");
-    })
-  }
-
-
+<script>
   var line_count = 1;
 
-  function save(){
-    document.file_form.action = "batch_create";
-    file_form.submit();
-  }
  function delete_line(l)
  {
-      GY.use(function(Y){
-          Y.one("#file_" + l).remove();
-      })
-  }
+     $("#file_" + l).remove();
+ }
+
   function generate_line()
   {
-      GY.use(function(Y){
-          var node = Y.Node.create('<tr id="file_' + line_count + '">'
+      var node = '<tr id="file_' + line_count + '">'
                   + '<td class="dataCol"></td>'
                   + '<td class="dataCol"><a onclick="delete_line(' + line_count + ');" href="javascript:void(0);"><%= t :delete%></a></td>'
-                  + '<td class="dataCol"><input type="file" required="required" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
-                  + '<td class="dataCol"><select required="required" name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= raw(options_for_select(available_file_categories).gsub!(/\n+/, ""))%>' + '</select></td>'
+                  + '<td class="dataCol"><input type="file" name="file[' + line_count + '][file]" id="file_' + line_count + '_file"></td>'
+                  + '<td class="dataCol"><select name="file[' + line_count + '][file_category]" id="file_' + line_count + '_file_category">' + '<%= raw(options_for_select(available_file_categories).gsub!(/\n+/, ""))%>' + '</select></td>'
                   + '<td class="dataCol"><input type="text" value="" rows="3" name="file[' + line_count + '][description]" id="file_' + line_count + '_description" cols="35">(<%= t(:file_upload_limit_alert, :m => Irm::SystemParametersManager.upload_file_limit) %>)</td>'
-                  + '</tr>');
-          Y.one("#file_body").appendChild(node);
-      });
+                  + '</tr>';
+      $("#file_body").append(node);
       line_count ++;
   }
 </script>
