--- a/app/views/irm/report_triggers/_new_form.html.erb
+++ b/app/views/irm/report_triggers/_new_form.html.erb
@@ -53,10 +53,13 @@
                 </div>
               </td>
             </tr>
+            <tr>
+              <td class="labelCol">
 
-            <%= render :partial => "irm/duel_select/search",:locals => {:label=>"",:f=>f,:types=>duel_types,:sources=>duel_values,:str_value_field=>:receiver_str,:str_value=>""} %>
-
-
+              </td>
+              <td class="dataCol" colspan="3">
+                <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>duel_types,:sources=>duel_values,:str_value_field=>:receiver_str,:str_value=>"",:size=>7} %>
+              </td>
 
             <tr>
               <td class="labelCol"><label for="report_trigger_time_mode"><%=t(:label_irm_report_trigger_time_mode)%></label></td>
