--- a/app/views/irm/wf_approval_processes/_new_step_5.html.erb
+++ b/app/views/irm/wf_approval_processes/_new_step_5.html.erb
@@ -40,8 +40,14 @@
                     <td class="labelCol empty">&nbsp;</td>
                     <td class="dataCol empty">&nbsp;</td>
                   </tr>
-                  <%= render :partial => "irm/duel_select/search",:locals => {:label=>t(:label_irm_wf_rule_action_type),:f=>f,:types=>bo_person_field_duel_types([Irm::ExternalSystem.name]),:sources=>bo_person_field_duel_values(@wf_approval_process.bo_code,[Irm::ExternalSystem.name]),:str_value_field=>:submitter_str,:str_value=>""} %>
-
+                  <tr>
+                     <td class="labelCol">
+                       <label for="duelType"><%=t(:label_irm_wf_rule_action_type)%></label>
+                     </td>
+                     <td class="dataCol" colspan="3">
+                       <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>bo_person_field_duel_types([Irm::ExternalSystem.name]),:sources=>bo_person_field_duel_values(@wf_approval_process.bo_code,[Irm::ExternalSystem.name]),:str_value_field=>:submitter_str,:str_value=>""} %>
+                     </td>
+                  </tr>
                 </tbody>
               </table>
             </div>
