--- a/app/views/irm/wf_approval_processes/add_exists_action.html.erb
+++ b/app/views/irm/wf_approval_processes/add_exists_action.html.erb
@@ -32,53 +32,14 @@
               <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label for="actionType"><%=t(:label_irm_wf_rule_action_type)%></label></td>
-              <td class="dataCol" colspan="3" style="width:82%">
-                <div class="actonType">
-                     <label><%= t(:search) %></label>
-                </div>
-                <div class="actonType">
-                   <%= select_tag_alias(:action_type,available_action_type,nil,:id=>"actionType") %>
-                </div>
-                <div class="actonType">
-                  <input type="text" size="30" id="duelQuery"/>
-                </div>
-                <div class="actonType">
-                   <div class="button"><a href="javascript:void(0)" id="duelSearch"><%=t(:search) %></a></div>
-                </div>
-              </td>
+               <td class="labelCol">
+                 <label for="duelType"><%=t(:label_irm_wf_rule_action_type)%></label>
+               </td>
+               <td class="dataCol" colspan="3">
+                 <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>available_action_type,:sources=>wf_approval_addable_actions(params[:id]),:str_value_field=>:selected_actions,:str_value=>wf_approval_exists_actions(@source[0],@source[1],@source[2])} %>
+               </td>
             </tr>
-            <tr id="actions">
-              <td class="labelCol"></td>
-              <td class="dataCol" colspan="3" width="82%">
-                <table class="duel">
-                  <tr class="duelTitle">
-                    <th><%= t(:duel_selectable)%></th>
-                    <th></th>
-                    <th><%= t(:duel_selected)%></th>
-                  </tr>
-                  <tr class="duelList">
-                    <td class="sourceCell">
-                      <%= select_tag_alias(:source,wf_approval_addable_actions(params[:id]),nil,{:id=>"source",:multiple=>true,:size=>14}) %>
-                    </td>
-                    <td class="buttonCell">
-                      <div class="text"><%= t(:add) %></div>
-                      <div class="text">
-                        <a href="javascript:void(0)" id="duelAdd"><img title="<%= t(:add) %>" class="rightArrowIcon" alt="<%= t(:add) %>" src="<%= theme_image_path("s.gif") %>"></a>
-                      </div>
-                      <div class="text">
-                        <a href="javascript:void(0)" id="duelRemove"><img title="<%= t(:delete) %>" class="leftArrowIcon" alt="<%= t(:delete) %>" src="<%= theme_image_path("s.gif") %>"></a>
-                      </div>
-                      <div class="duelingText"><%= t(:delete) %></div>
-                    </td>
-                    <td class="targetCell">
-                      <%= hidden_field_tag(:selected_actions,wf_approval_exists_actions(@source[0],@source[1],@source[2]),{:id=>"selectedActions"}) %>
-                      <%= select_tag_alias(:target,[],nil,{:id=>"target",:multiple=>true,:size=>14}) %>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
+
         </tbody>
       </table>
     </div>
@@ -98,21 +59,3 @@
   </div>
 </div>
 <% end %>
-<script type="text/javascript">
-  GY.use("duelselect",function(Y){
-    var duelselect = new Y.DuelSelect({source:"#source",target:"#target",valueNode:"#selectedActions",type:Y.one("#actionType").get("value"),addButton:"#duelAdd",removeButton:"#duelRemove"});
-    Y.one("#actionType").on("change",function(e){
-      Y.one("#duelQuery").set("value","");
-      duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
-    });
-    Y.one("#duelSearch").on("click",function(e){
-      duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
-    });
-    Y.one("#duelQuery").on("keydown",function(e){
-      if(e.keyCode==13){
-          e.preventDefault();
-          duelselect.filter(Y.one("#actionType").get("value"),Y.one("#duelQuery").get("value"));
-      }
-    });
-  });
-</script>
