--- a/app/views/irm/wf_approval_steps/_step_approver.html.erb
+++ b/app/views/irm/wf_approval_steps/_step_approver.html.erb
@@ -1,7 +1,10 @@
 <table class="detailList" cellpadding="0" cellspacing="0" border="0">
   <tbody>
-
-    <%= render :partial => "irm/duel_select/ext_search",:locals => {:label=>"",:f=>f,:types=>bo_person_field_duel_types([Irm::ExternalSystem.name]),:sources=>bo_person_field_duel_values(@wf_approval_process.bo_code,[Irm::ExternalSystem.name]),:str_value_field=>:approver_str,:str_value=>@wf_approval_step.get_approver_str} %>
+    <tr>
+       <td class="dataCol" colspan="4">
+         <%= render :partial => "irm/duel_select/tmpl",:locals => {:f=>f,:types=>bo_person_field_duel_types([Irm::ExternalSystem.name]),:sources=>bo_person_field_duel_values(@wf_approval_process.bo_code,[Irm::ExternalSystem.name]),:str_value_field=>:approver_str,:str_value=>@wf_approval_step.get_approver_str} %>
+       </td>
+    </tr>
 
     <tr>
       <td class="dataCol" colspan="4"><b><%= t(:label_irm_wf_approval_step_multiple_approver_mode) %></b></td>
