修正应用，Tab,Profile页面的javascript

--- a/app/views/irm/business_objects/show.html.erb
+++ b/app/views/irm/business_objects/show.html.erb
@@ -95,7 +95,7 @@
                        { :key => "approval_page_field_flag",:formatter=>"Y.irm.template", :label => t(:label_irm_object_attribute_approval_page_field_flag)}
 
 
-                       ],{:paginator_box=>"standardPaginator",:search_box=>"standardSearchBox"})%>
+                       ],{:paginator_box=>"standardPaginator",:search_box=>"standardSearchBox",:height=>"150",:row_perpage=>"5"})%>
         <div id="standardPaginator"></div>
       </div>
     </div>
@@ -148,7 +148,7 @@
                        { :key => "approval_page_field_flag",:formatter=>"Y.irm.template", :label => t(:label_irm_object_attribute_approval_page_field_flag)}
 
 
-                       ],{:paginator_box=>"object_attributesPaginator",:search_box=>"object_attributesSearchBox"})%>
+                       ],{:paginator_box=>"object_attributesPaginator",:height=>"310",:search_box=>"object_attributesSearchBox"})%>
         <div id="object_attributesPaginator"></div>
       </div>
     </div>
